Import of KOLIBRIE/DateTime-Format-Oracle-0.06 from CPAN.
gitpan-cpan-distribution: DateTime-Format-Oracle
gitpan-cpan-version:      0.06
gitpan-cpan-path:         KOLIBRIE/DateTime-Format-Oracle-0.06.tar.gz
gitpan-cpan-author:       KOLIBRIE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for DateTime-Format-Oracle
 
+0.06  Tue Oct 11 21:18:12 2011
+	- added a test that specifies subsecond granularity
+	- now requires Convert::NLS_DATE_FORMAT 0.03
+	  (Thank you Jon Bjornstad and Zefram)
+
 0.05  Tue Jun 10 12:55:55 2008
 	- implemented parse_timestamp_with_timezone and
 	  format_timestamp_with_timezone
