--- a/README
+++ b/README
@@ -43,7 +43,7 @@ You can also look for information at:
 
 COPYRIGHT AND LICENCE
 
-Copyright (C) 2006, 2008 Nathan Gray
+Copyright (C) 2006, 2008, 2011 Nathan Gray
 
 This program is free software; you can redistribute it and/or modify it
 under the same terms as Perl itself.
